<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:id="@+id/textname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/textname"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/textemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/textemail"
        android:layout_below="@+id/textname"
        android:layout_alignLeft="@+id/textname"
        android:layout_alignStart="@+id/textname" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/textfavlang"
        android:layout_below="@+id/textemail"
        android:layout_alignLeft="@+id/textemail"
        android:layout_alignStart="@+id/textemail"
        android:layout_alignRight="@+id/textemail"
        android:layout_alignEnd="@+id/textemail" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radiogrp"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView">

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/radioButton2"
            android:layout_alignStart="@+id/radioButton2"
            android:layout_below="@+id/radioButton2"
            android:layout_marginTop="11dp"
            android:layout_weight="1"
            android:text="@string/radiojava" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/radioButton"
            android:layout_alignStart="@+id/radioButton"
            android:layout_below="@+id/radioButton"
            android:layout_marginTop="13dp"
            android:layout_weight="1"
            android:text="@string/radioc" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView"
            android:layout_alignStart="@+id/textView"
            android:layout_below="@+id/textView"
            android:layout_marginTop="18dp"
            android:layout_weight="1"
            android:text="@string/radiocplus" />
    </RadioGroup>

    <TextView
        android:id="@+id/textacnt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textacnt"
        android:layout_above="@+id/seekBar"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginBottom="13dp" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Off"
        android:layout_alignBaseline="@+id/textacnt"
        android:layout_alignBottom="@+id/textacnt"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textmood"
        android:layout_above="@+id/seekBar"
        android:layout_alignLeft="@+id/radiogrp"
        android:layout_alignStart="@+id/radiogrp" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonsubmit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/buttonsubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonsubmit"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp" />

</RelativeLayout>