<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:id="@+id/name3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <EditText
        android:id="@+id/emailfinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/radiogrp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <RadioGroup
        android:id="@+id/radiogrp"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_centerVertical="true">

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/radioButton2"
            android:layout_alignStart="@+id/radioButton2"
            android:layout_below="@+id/radioButton2"
            android:layout_marginTop="11dp"
            android:layout_weight="1"
            android:text="@string/radiojava" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/radioButton"
            android:layout_alignStart="@+id/radioButton"
            android:layout_below="@+id/radioButton"
            android:layout_marginTop="13dp"
            android:layout_weight="1"
            android:text="@string/radioc" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView"
            android:layout_alignStart="@+id/textView"
            android:layout_below="@+id/textView"
            android:layout_marginTop="18dp"
            android:layout_weight="1"
            android:text="@string/radiocplus" />
    </RadioGroup>

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Off"
        android:layout_above="@+id/textView6"
        android:layout_toRightOf="@+id/name3"
        android:layout_toEndOf="@+id/name3"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp"
        android:layout_marginBottom="22dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textmood"
        android:layout_above="@+id/seekBar2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="24dp" />

    <SeekBar
        android:id="@+id/seekBar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="50dp" />

    <Button
        android:id="@+id/buttonsave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:text="SAVE" />

</RelativeLayout>